# crafthex

./: CMakeLists.txt  LICENSE.md  README.md  builder.py  server.py
shaders/: sky_fragment_aurora.glsl
src/: auth.c  config.h  engine.c  engine.h  main.c  platform.c  platform.h  util.c  wait.c  wait.h
